--- a/conceptosbasicos.html
+++ b/conceptosbasicos.html
@@ -5,6 +5,14 @@
 	<title>Prueba de git</title>
 </head>
 <body>
-	
+	<header>
+		
+	</header>
+	<main>
+		
+	</main>
+	<footer>
+		
+	</footer>
 </body>
 </html>
