--- a/quien es.html
+++ b/quien es.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Prueba de git</title>
-</head>
-<body>
-	<header>
+<header>
 		<div>
 			<img src="" alt="logo de marca">
 		</div>
@@ -18,10 +11,5 @@
 		</nav>
 	</header>
 	<main>
-		
+		<h1>About us</h1>
 	</main>
-	<footer>
-		
-	</footer>
-</body>
-</html>
